Changes from Ant 1.2 to the current sources
===========================================

Changes that could break older environments:
--------------------------------------------

* Ant doesn't search for the buildfile anymore, unless you use the new
  -find argument.

* <perforce> has been replaced by a number of new tasks.

Other changes:
--------------

* A GUI Frontend: Antidote

* New tasks: stylebook, propertyfile, depend, antlr, telnet, csc,
  ilasm, transform, javah, several clearcase tasks

* Added output attribute to <java>.

* Added nested prefixedfileset element to <war>

* Changed <sql> so that printing is at the task level rather than 
  the statement level.
  
* javadoc task will pass -d flag to any doclet if the destDir attribute is
  given. If the doclet does not accept the -d flag then omit the destdir
  attribute.

* <cab> can work on non-Windows platforms with the help of libcabinet. 
  See http://trill.cis.fordham.edu/~barbacha/cabinet_library/.

* <ftp> now supports passive mode.

* New <mapper> data type that can be used to get influence on the
  target files for some tasks like <copy> or enable new types of tasks
  like <transform>.

* <execon> provides more control over the command line now, the names
  of the source files are no longer required to be at the end of the
  command.

Fixed bugs:
-----------

* <signjar> doesn't use deprectated methods anymore.

* javadoc's failonerror attribute works again

* Changed <sql> task so that printing result sets works on Oracle

* Changes to ddcreator and ejbc helper to respect the descriptor hierarchy
  keppgenerated in ejbc can now be turned off
  
* ejbjar now correctly ignores <ejb-ref> elements in the deployment descriptor.
  CMP files are included by parsing the weblogic deployment descriptor rather than
  relying on the naming convention used in ant 1.2
  Include super classes and super interfaces into the generated ejb jar files

* <vssget> now correctly deals with spaces in arguments
